# ASR1606

./: .gitignore  CMakeLists.txt  Makefile  app_build_doc.md  makeDepend.mak  sc_application.c
config/: Config_APP.cmake  ToolChain.cmake  app_linkscript_APP_320K.ld  app_linkscript_APP_512K.ld  app_linkscript_ASR5311_APP_140K.ld  app_linkscript_GWSD.ld  app_linkscript_HTTX.ld  app_linkscript_ST.ld  app_linkscript_XYJ.ld
examples/mqtt/: mqtt_aliauth_dynreg.c
examples/ssl/: server_verify.c
examples/uart/: download_file.c  uart.c  uart.h
kernel/A7680C_MANS_1606/: KernelDefinitions.cmake  api_map.c
sc_demo/: CMakeLists.txt
sc_demo/inc/: demo_lcd.h
sc_demo/src/: cus_uart.c  cus_urc.c  cus_usb_vcom.c  demo_app_download.c  demo_app_updater.c  demo_audio.c  demo_auto_mqtt.c  demo_ble.c  demo_call.c  demo_cam.c  demo_cam_dirver.c  demo_file_system.c  demo_flash.c  demo_fota.c  demo_ftps.c  demo_ftps_test.c  demo_gpio.c  demo_gps.c  demo_helloworld.c  demo_htp.c  demo_https.c  demo_i2c.c  demo_lcd.c  demo_loc.c  demo_loc_test.c  demo_mqtt.c  demo_network.c  demo_ntp.c  demo_pm.c  demo_poc.c  demo_pwm.c  demo_rtc.c  demo_simcard.c  demo_sms.c  demo_spi.c  demo_ssl.c  demo_ssl_test.c  demo_tcpip.c  demo_tts.c  demo_uart.c  (+5 more)
sc_demo/src/token/: onenet_base64.c  onenet_hmac_sha1.c  onenet_md5.c  token.c
sc_demo/src/utils/: core_auth.c  core_string.c
sc_lib/inc/: simcom_cam_common.h  simcom_tcpip_old.h  simcom_tts_api.h
sc_lib/inc/GPIO/: A7630C_LANS_GPIO.h  A7670C_FANS_GPIO.h  A7670C_MANS_LANS_GPIO.h  A7680C_LANS_GPIO.h
sc_lib/inc/token/: onenet_base64.h  onenet_hmac_sha1.h  onenet_md5.h  token.h
sc_lib/inc/utils/: aiot_state_api.h  aiot_sysdep_api.h  core_auth.h  core_stdinc.h  core_string.h
script/: make_image.mak
